@@ -1,8 +1,8 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_REVISION($Id: configure.in,v 1.30 2005-06-30 22:15:12 mschimek Exp $)
+AC_REVISION($Id: configure.in,v 1.31 2005-09-11 23:07:05 mschimek Exp $)
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(mp1e, 1.9.7cvs)
+AM_INIT_AUTOMAKE(mp1e, 1.9.8)
 AM_CONFIG_HEADER(config.h)
 AM_ACLOCAL_INCLUDE(macros)
 
