@@ -1,3 +1,8 @@
+2005-09-03    <mschimek@users.sf.net>
+
+	* devices/v4l25.c: Didn't reset cropping window and limit image
+	  size to active video size.
+
 2005-08-15    <mschimek@users.sf.net>
 
 	* b_mp1e.c: Added cut_output variable for an unused mp1e function.
